--- a/csh_Loon.conf
+++ b/csh_Loon.conf
@@ -56,7 +56,7 @@ resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/scr
 ## 策略组
 ## 将分流规则传递过来的网络请求进行分发
 # 所有节点
-All Proxy = select,*,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Proxy.png
+All Proxy = select,Nexitally,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Proxy.png
 # 选择节点
 Proxy = select,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Proxy.png
 # 服务器按地区分组策略
