--- a/csh_Loon.conf
+++ b/csh_Loon.conf
@@ -49,7 +49,7 @@ resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/scr
 台湾 = NameRegex, FilterKey = "(?i)(台|TW|Tai)"
 日本 = NameRegex, FilterKey = "(?i)(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)"
 韩国 = NameRegex, FilterKey = "(?i)(KR|Korea|KOR|首尔|韩|韓)"
-美国 = NameRegex, FilterKey = "(?i)(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)"
+美国 = NameRegex, FilterKey = "(?i)(美国|USA|United States)"
 新加坡 = NameRegex, FilterKey = "(?i)(新加坡|坡|狮城|SG|Singapore)"
 
 [Proxy Group]
@@ -58,7 +58,9 @@ resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/scr
 # 所有节点
 All Proxy = select,Nexitally,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Proxy.png
 # 选择节点
-Proxy = select,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Proxy.png
+Proxy = select,All Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Proxy.png
+# Global策略
+Global = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Outside.png
 # 服务器按地区分组策略
 # > 美国
 US = select,美国,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Country/US.png
@@ -70,8 +72,6 @@ JP = select,日本,img-url = https://raw.githubusercontent.com/erdongchanyo/icon
 TW = select,台湾,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Country/TW02.png
 # > 新加坡
 SG = select,新加坡,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Country/SG.png
-# Global策略
-Global = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Outside.png
 # GlobalMedia策略
 GlobalMedia = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/GMedia.png
 # 国外媒体细分策略
