--- a/csh_Loon.conf
+++ b/csh_Loon.conf
@@ -45,8 +45,8 @@ resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/scr
 # NodeSelect: 使用在UI上选择的节点。
 # NameKeyword: 根据提供的关键词对订阅中所有节点的名称进行筛选，使用筛选后的节点。
 # NameRegex: 根据提供的正则表达式对订阅中所有节点的名称进行筛选，使用筛选后的节点。
-香港 = NameKeyword, FilterKey = "港|HK|Hong Kong"
-台湾 = NameKeyword, FilterKey = "台|TW|Tai"
+香港 = NameKeyword, FilterKey = "Hong Kong"
+台湾 = NameKeyword, FilterKey = "台""Tai"
 日本 = NameKeyword, FilterKey = "(?i)(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)"
 韩国 = NameKeyword, FilterKey = "(?i)(KR|Korea|KOR|首尔|韩|韓)"
 美国 = NameKeyword, FilterKey = "(?i)(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)"
