--- a/csh_Loon.conf
+++ b/csh_Loon.conf
@@ -45,11 +45,11 @@ resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/scr
 # NodeSelect: 使用在UI上选择的节点。
 # NameKeyword: 根据提供的关键词对订阅中所有节点的名称进行筛选，使用筛选后的节点。
 # NameRegex: 根据提供的正则表达式对订阅中所有节点的名称进行筛选，使用筛选后的节点。
-香港 = NameRegex, FilterKey = "(?i)(港|HK|Hong)"
-台湾 = NameRegex, FilterKey = "(?i)(台|TW|Tai)"
-日本 = NameRegex, FilterKey = "(?i)(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)"
-美国 = NameRegex, FilterKey = "(?i)(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)"
-新加坡 = NameRegex, FilterKey = "(?i)(新加坡|坡|狮城|SG|Singapore)"
+香港 = NameRegex, FilterKey = "(港|HK|Hong)"
+台湾 = NameRegex, FilterKey = "(台|TW|Tai)"
+日本 = NameRegex, FilterKey = "(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)"
+美国 = NameRegex, FilterKey = "(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)"
+新加坡 = NameRegex, FilterKey = "(新加坡|坡|狮城|SG|Singapore)"
 
 [Proxy Group]
 ## 策略组
