--- a/csh_Loon.conf
+++ b/csh_Loon.conf
@@ -106,6 +106,10 @@ Apple = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubuse
 Google = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Google.png
 # > Microsoft策略
 Microsoft = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Microsoft.png
+# > Amazon策略
+Amazon = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://github.com/erdongchanyo/icon/blob/main/Policy-Filter/Amazon.png
+# > 🎲 Bet策略
+Bet = select,Nexitally,FINAL,DIRECT
 # > Weibo策略
 Weibo = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Weibo.png
 # Mainland策略-国内访问
@@ -159,6 +163,10 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Advertising/Advertising.list, policy=Advertising, tag=Advertising规则, enabled=true
 # Mainland规则
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/China/China.list, policy=Mainland, tag=Mainland规则, enabled=true
+# Amazon规则
+https://raw.githubusercontent.com/Olddriverrr/1/main/amazon.list, policy=Amazon, tag=Amazon规则, enabled=true
+# Bet规则
+https://raw.githubusercontent.com/Olddriverrr/1/main/bet.list, policy=Bet, tag=Bet规则, enabled=true
 
 [Rule]
 # 本地分流规则:相同规则下本地规则优先生效
