--- a/csh_Loon.conf
+++ b/csh_Loon.conf
@@ -107,8 +107,8 @@ Google = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubus
 # > Microsoft策略
 Microsoft = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Microsoft.png
 # > Amazon策略
-Amazon = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://github.com/erdongchanyo/icon/blob/main/Policy-Filter/Amazon.png
-# > 🎲 Bet策略
+Amazon = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Amazon.png
+# > Bet策略
 Bet = select,Nexitally,FINAL,DIRECT
 # > Weibo策略
 Weibo = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Weibo.png
