--- a/csh_Loon.conf
+++ b/csh_Loon.conf
@@ -100,6 +100,8 @@ Speedtest = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githu
 PayPal = select,Proxy,US,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Paypal.png
 # > TestFlight策略
 TestFlight = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/TestFlight.png
+# > 游戏平台策略
+游戏平台 = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT
 # > Apple策略
 Apple = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Apple.png
 # > Google策略
@@ -127,6 +129,10 @@ FINAL = select,Proxy,DIRECT,img-url = https://raw.githubusercontent.com/erdongch
 https://raw.githubusercontent.com/Olddriverrr/1/main/amazon.list, policy=Amazon, tag=Amazon规则, enabled=true
 # Bet规则
 https://raw.githubusercontent.com/Olddriverrr/1/main/bet.list, policy=Bet, tag=Bet规则, enabled=true
+# Steam规则
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Steam/Steam.list, policy=游戏平台, tag=Steam规则, enabled=true
+# Epic规则
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Epic/Epic.list, policy=游戏平台, tag=Epic规则, enabled=true
 # Speedtest规则
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Speedtest/Speedtest.list, policy=Speedtest, tag=Speedtest规则, enabled=true
 # Netflix规则
