--- a/csh_Loon.conf
+++ b/csh_Loon.conf
@@ -94,12 +94,6 @@ BiliBili = select,Proxy,HK,TW,DIRECT,img-url = https://raw.githubusercontent.com
 Telegram = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Telegram.png
 # > Twitter策略
 Twitter = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Twitter.png
-# > Speedtest策略
-Speedtest = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Speedtest.png
-# > PayPal策略
-PayPal = select,Proxy,US,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Paypal.png
-# > TestFlight策略
-TestFlight = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/TestFlight.png
 # > 游戏平台策略
 游戏平台 = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT
 # > Apple策略
@@ -112,11 +106,13 @@ Microsoft = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githu
 Amazon = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Amazon.png
 # > Bet策略
 Bet = select,Nexitally,FINAL,DIRECT
+# > Supercell策略
+Supercell = sselect,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT
 # > Weibo策略
 Weibo = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Weibo.png
-# Mainland策略-国内访问
+# Mainland策略
 Mainland = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Mainland.png
-# Advertising策略-去广告
+# Advertising策略
 Advertising = select,Proxy,DIRECT,REJECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/AdBlock.png
 # FINAL策略：如果以上的策略均未被匹配到，则听从此策略组的规定
 FINAL = select,Proxy,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Final01.png
@@ -133,6 +129,8 @@ https://raw.githubusercontent.com/Olddriverrr/1/main/bet.list, policy=Bet, tag=B
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Steam/Steam.list, policy=游戏平台, tag=Steam规则, enabled=true
 # Epic规则
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Epic/Epic.list, policy=游戏平台, tag=Epic规则, enabled=true
+# Supercell规则
+https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/Supercell/Supercell.list, policy=Supercell, tag=Supercell规则, enable=true
 # Speedtest规则
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Speedtest/Speedtest.list, policy=Speedtest, tag=Speedtest规则, enabled=true
 # Netflix规则
