--- a/csh_Loon.conf
+++ b/csh_Loon.conf
@@ -107,7 +107,7 @@ Amazon = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubus
 # > Bet策略
 Bet = select,Nexitally,FINAL,DIRECT
 # > Supercell策略
-Supercell = sselect,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT
+Supercell = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT
 # > Weibo策略
 Weibo = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Weibo.png
 # Mainland策略
@@ -130,7 +130,7 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/
 # Epic规则
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Epic/Epic.list, policy=游戏平台, tag=Epic规则, enabled=true
 # Supercell规则
-https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/Supercell/Supercell.list, policy=Supercell, tag=Supercell规则, enable=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Supercell/Supercell.list, policy=Supercell, tag=Supercell规则, enable=true
 # Speedtest规则
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Speedtest/Speedtest.list, policy=Speedtest, tag=Speedtest规则, enabled=true
 # Netflix规则
