--- a/csh_Loon.conf
+++ b/csh_Loon.conf
@@ -50,6 +50,7 @@ resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/scr
 日本 = NameRegex, FilterKey = "(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)"
 美国 = NameRegex, FilterKey = "(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)"
 新加坡 = NameRegex, FilterKey = "(新加坡|坡|狮城|SG|Singapore)"
+加拿大 = NameRegex, FilterKey = "(加拿大|CA|Canada)"
 
 [Proxy Group]
 ## 策略组
@@ -69,6 +70,8 @@ JP = select,日本,img-url = https://raw.githubusercontent.com/erdongchanyo/icon
 TW = select,台湾,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Country/TW02.png
 # > 新加坡
 SG = select,新加坡,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Country/SG.png
+# > 加拿大
+CA = select,加拿大,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Country/SG.png
 # Global策略
 Global = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Outside.png
 # GlobalMedia策略
@@ -105,7 +108,7 @@ Microsoft = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githu
 # > Amazon策略
 Amazon = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Amazon.png
 # > Bet策略
-Bet = select,Nexitally,FINAL,DIRECT
+Bet = select,CA,FINAL,DIRECT
 # > Supercell策略
 Supercell = select,Proxy,US,HK,JP,TW,SG,FINAL,DIRECT
 # > Weibo策略
