--- a/csh_Quantumult_X.conf
+++ b/csh_Quantumult_X.conf
@@ -49,7 +49,7 @@ server=/*testflight.apple.com/23.76.66.98
 ## 策略组
 ## 将分流规则传递过来的网络请求进行分发
 # 选择节点
-Static=选择节点,US,HK,JP,TW,SG,FINAL,DIRECT,img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Proxy.pn
+Static=选择节点, proxy, US, HK, JP, TW, SG, FINAL, DIRECT, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Proxy.pn
 # 服务器按地区分组策略
 # 美国
 static=US, server-tag-regex=美|美国|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|🇺🇸|US|us, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Country/US.png
@@ -105,7 +105,7 @@ static=Mainland, Final, direct, img-url=https://raw.githubusercontent.com/erdong
 # Advertising策略-去广告
 static=Advertising, direct, reject, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/AdBlock.png
 # FINAL策略：如果以上的策略均未被匹配到，则听从此策略组的规定
-static=Final, Auto-HK, proxy, direct, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Final01.png
+static=Final, proxy, direct, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Final01.png
 
 [filter_remote]
 ## 远程分流规则订阅
