--- a/csh_Quantumult_X.conf
+++ b/csh_Quantumult_X.conf
@@ -49,63 +49,69 @@ server=/*testflight.apple.com/23.76.66.98
 ## 策略组
 ## 将分流规则传递过来的网络请求进行分发
 # 节点选择
-Static=节点选择, proxy, US, HK, JP, TW, SG, DIRECT, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Proxy.pn
+Static=节点选择, proxy, US, HK, JP, TW, SG, DIRECT
 # 服务器按地区分组策略
 # 美国
-static=US, server-tag-regex=美|美国|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|🇺🇸|US|us, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Country/US.png
+static=US, server-tag-regex=美|美国|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US
 # 香港
-static=HK, server-tag-regex=HK|香港|港|🇭🇰️|Hongkong, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Country/HK02.png
+static=HK, server-tag-regex=HK|香港|港|Hong
 # 日本
-static= JP, server-tag-regex= 日|日本|东京|大阪|泉日|埼玉|沪日|深日|🇯🇵|JP, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Country/JP.png
+static= JP, server-tag-regex= 日|日本|东京|大阪|泉日|埼玉|沪日|深日|JP
 # 台湾
-static=TW, server-tag-regex=台|台湾|TW, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Country/TW02.png
+static=TW, server-tag-regex=台|台湾|TW|Taiwan
 # 新加坡
-static=SG, server-tag-regex=狮城|新|新加坡|🇸🇬|SG, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Country/SG.png
+static=SG, server-tag-regex=狮城|新|新加坡|SG|Singapore
+# 加拿大
+static=CA, server-tag-regex=Canada|加拿大｜CA
 # Global策略
-static=Global, 节点选择, US, HK, JP, TW, SG, Final, direct, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Outside.png
+static=Global, 节点选择, US, HK, JP, TW, SG, direct
 # GlobalMedia策略
-static=GlobalMedia, 节点选择, US, HK, JP, TW, SG, Final, direct, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/GMedia.png
+static=GlobalMedia, 节点选择, US, HK, JP, TW, SG, direct
 # 国外媒体细分策略
 # > Netflix策略
-static=Netflix, 节点选择, US, HK, JP, TW, SG, Final, direct, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Netflix.png
+static=Netflix, 节点选择, US, HK, JP, TW, SG, direct
 # > Disney+策略
-static=Disney+, 节点选择, US, HK, JP, TW, SG, Final, direct, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Disney+.png
+static=Disney+, 节点选择, US, HK, JP, TW, SG, direct
 # > HBO策略
-static=HBO, 节点选择, US, HK, TW, Final, direct, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/HBO.png
+static=HBO, 节点选择, US, HK, TW, Final, direct
 # > YouTube策略
-static=YouTube, 节点选择, US, HK, JP, TW, SG, Final, direct, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Youtube.png
+static=YouTube, 节点选择, US, HK, JP, TW, SG, direct
 # > Spotify策略
-static=Spotify, 节点选择, US, HK, JP, TW, SG, Final, direct, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Spotify.png
+static=Spotify, 节点选择, US, HK, JP, TW, SG, direct
 # > TikTok策略
-static=TikTok, 节点选择, US, JP, TW, SG, Final, direct, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Tiktok.png
+static=TikTok, 节点选择, US, JP, TW, SG, direct
 # 国内媒体细分策略
 # > BiliBili策略
-static=BiliBili, 节点选择, HK, TW, direct, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Bilibili.png
+static=BiliBili, 节点选择, HK, TW, direct
 # 软件&服务策略
 # > Telegram策略
-static=Telegram, 节点选择, US, HK, JP, TW, SG, Final, direct, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Telegram.png
+static=Telegram, 节点选择, US, HK, JP, TW, SG, direct
 # > Twitter策略
-static=Twitter, 节点选择, US, HK, JP, TW, SG, Final, direct, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Twitter.png
+static=Twitter, 节点选择, US, HK, JP, TW, SG, direct
 # > Speedtest策略
-static=Speedtest, 节点选择, US, HK, JP, TW, SG, Final, direct, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Speedtest.png
+static=Speedtest, 节点选择, US, HK, JP, TW, SG, direct
 # > PayPal策略
-static=PayPal, direct, US, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Paypal.png
+static=PayPal, US, direct
 # > TestFlight策略
-static=TestFlight, 节点选择, US, HK, JP, TW, SG, Final, direct, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/TestFlight.png
+static=TestFlight, 节点选择, US, HK, JP, TW, SG, Final, direct
 # > Apple策略
-static=Apple, 节点选择, US, HK, JP, TW, SG, Final, direct, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Apple.png
+static=Apple, 节点选择, US, HK, JP, TW, SG, Final, direct
 # > Google策略
-static=Google, 节点选择, US, HK, JP, TW, SG, Final, direct, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Google.png
+static=Google, 节点选择, US, HK, JP, TW, SG, Final, direct
 # > Microsoft策略
-static=Microsoft, 节点选择, US, HK, Final, direct, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Microsoft.png
+static=Microsoft, 节点选择, US, HK, Final, direct
+Static=Amazon, 节点选择, US, HK, JP, TW, SG, direct
+Static=Bet, CA, direct
+Statoc=Game Platform, 节点选择, US, HK, JP, TW, SG, direct
+Static=Supercell, 节点选择, US, HK, JP, TW, SG, direct
 # > Weibo策略
-static=Weibo, 节点选择, US, HK, Final, direct, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Weibo.png
+static=Weibo, 节点选择, US, HK, Final, direct
 # # Mainland策略
-static=Mainland, Final, direct, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Mainland.png
+static=Mainland, Final, direct
 # Advertising策略
-static=Advertising, direct, reject, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/AdBlock.png
+static=Advertising, direct, reject
 # FINAL策略：如果以上的策略均未被匹配到，则听从此策略组的规定
-static=Final, 节点选择, proxy, direct, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Final01.png
+static=Final, 节点选择, proxy, direct
 
 [filter_remote]
 ## 远程分流规则订阅
@@ -113,6 +119,16 @@ static=Final, 节点选择, proxy, direct, img-url=https://raw.githubusercontent
 # 部分规则有先后顺序要求，调整顺序可能失效
 # Speedtest规则
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Speedtest/Speedtest.list, tag=Speedtest 规则, force-policy=Speedtest, update-interval=86400, opt-parser=false, enabled=true
+# Amazon规则
+https://raw.githubusercontent.com/Olddriverrr/1/main/amazon.list, Amazon 规则, force-policy=Amazon, update-interval=86400, opt-parser=false, enabled=true
+# Bet规则
+https://raw.githubusercontent.com/Olddriverrr/1/main/bet.list, tag=Bet 规则, force-policy=Bet, update-interval=86400, opt-parser=false, enabled=true
+# Steam规则
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Steam/Steam.list, tag=Steam 规则, force-policy=Game Platform, update-interval=86400, opt-parser=false, enabled=true
+# Epic规则
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Epic/Epic.list, tag=Epic 规则, force-policy=Game Platform, update-interval=86400, opt-parser=false, enabled=true
+# Supercell规则
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Supercell/Supercell.list, tag=Supercell 规则, force-policy=Supercell, update-interval=86400, opt-parser=false, enabled=true
 # Netflix规则
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Netflix/Netflix.list, tag=Netflix 规则, force-policy=Netflix, update-interval=86400, opt-parser=false, enabled=true
 # Disney规则
