--- a/csh_Quantumult_X.conf
+++ b/csh_Quantumult_X.conf
@@ -102,7 +102,7 @@ static=Google, 节点选择, US, HK, JP, TW, SG, Final, direct
 static=Microsoft, 节点选择, US, HK, Final, direct
 Static=Amazon, 节点选择, US, HK, JP, TW, SG, direct
 Static=Bet, CA, direct
-Statoc=Game Platform, 节点选择, US, HK, JP, TW, SG, direct
+Static=Game Platform, 节点选择, US, HK, JP, TW, SG, direct
 Static=Supercell, 节点选择, US, HK, JP, TW, SG, direct
 # > Weibo策略
 static=Weibo, 节点选择, US, HK, Final, direct
