--- a/csh_clash.ini
+++ b/csh_clash.ini
@@ -7,7 +7,7 @@ RULESET=Supercell,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script
 RULESET=Supercell,https://raw.githubusercontent.com/Olddriverrr/1/main/Supercell.list
 RULESET=Bet,https://raw.githubusercontent.com/Olddriverrr/1/main/bet.list
 RULESET=Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Netflix/Netflix.yaml
-RULESET=Disney,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Disney/Disney.yaml
+RULESET=Disney+,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Disney/Disney.yaml
 RULESET=HBO,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/HBO/HBO.yaml
 RULESET=Youtube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/YouTube/YouTube.yaml
 RULESET=Spotify,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Spotify/Spotify.yaml
