--- a/csh_clash.ini
+++ b/csh_clash.ini
@@ -1,5 +1,4 @@
-#规则集
-#媒体
+;设置规则标志位
 RULESET=Amazon,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Amazon/Amazon.yaml
 RULESET=Game Platform,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Epic/Epic.yaml
 RULESET=Game Platform,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.yaml
@@ -26,7 +25,7 @@ RULESET=Globle,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/re
 RULESET=Globle,[]GEOIP,CN
 RULESET=Final,[]FINAL
 
-#分组
+;设置分组标志位
 custom_proxy_group=All Proxies`select`.*
 custom_proxy_group=Proxy`select`[]HK`[]TW`[]SG`[]JP`[]US`[]All Proxies
 custom_proxy_group=HK`select`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
