--- a/csh_clash.ini
+++ b/csh_clash.ini
@@ -52,7 +52,7 @@ custom_proxy_group=Weibo`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
 custom_proxy_group=Amazon`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
 custom_proxy_group=Game Platform`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
 custom_proxy_group=Supercell`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
-custom_proxy_group=Bet`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
+custom_proxy_group=Bet`select`[]Proxy`[]CA`[]DIRECT
 custom_proxy_group=Mainland`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
 custom_proxy_group=Final`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
 
