--- a/csh_clash.ini
+++ b/csh_clash.ini
@@ -2,7 +2,7 @@
 ruleset=Amazon,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Amazon/Amazon.list
 ruleset=Game Platform,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Epic/Epic.list
 ruleset=Game Platform,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
-ruleset=Supercell,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Supercell/Supercell.yaml
+ruleset=Supercell,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Supercell/Supercell.list
 ruleset=Supercell,https://raw.githubusercontent.com/Olddriverrr/1/main/Supercell.list
 ruleset=Bet,https://raw.githubusercontent.com/Olddriverrr/1/main/bet.list
 ruleset=Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Netflix/Netflix.list
