--- a/csh_clash.ini
+++ b/csh_clash.ini
@@ -27,34 +27,40 @@ ruleset=Final,[]FINAL
 
 ;设置分组标志位
 custom_proxy_group=All Proxies`select`.*
-custom_proxy_group=Proxy`select`[]HK`[]TW`[]SG`[]JP`[]US`[]All Proxies
-custom_proxy_group=HK`select`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=TW`select`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=SG`select`(新加坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=JP`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=Proxy`select`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]All Proxies
 custom_proxy_group=US`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=US AUTO`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=HK`select`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=HK AUTO `url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=JP`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=JP AUTO`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=TW`select`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=TW AUTO`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=SG`select`(新加坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=SG AUTO`url-test`(新加坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=CA`select`(加拿大|Canada|CA)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=Globle`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
-custom_proxy_group=Netflix`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
-custom_proxy_group=Disney+`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
-custom_proxy_group=HBO`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
-custom_proxy_group=Youtube`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
-custom_proxy_group=Spotify`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
-custom_proxy_group=TikTok`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
-custom_proxy_group=BiliBili`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
-custom_proxy_group=Telegram`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
-custom_proxy_group=Twitter`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
-custom_proxy_group=Paypal`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
-custom_proxy_group=Apple`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
-custom_proxy_group=Google`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
-custom_proxy_group=Microsoft`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
-custom_proxy_group=Weibo`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
-custom_proxy_group=Amazon`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
-custom_proxy_group=Game Platform`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
-custom_proxy_group=Supercell`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
-custom_proxy_group=Bet`select`[]Proxy`[]CA`[]DIRECT
-custom_proxy_group=Mainland`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
-custom_proxy_group=Final`select`[]Proxy`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT
+custom_proxy_group=CA AUTO`url-test`(加拿大|Canada|CA)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=Globle`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=Netflix`select`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=Disney+`select`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=HBO`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=Youtube`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=Spotify`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=TikTok`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=BiliBili`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=Telegram`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=Twitter`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=Paypal`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=Apple`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=Google`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=Microsoft`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=Weibo`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=Amazon`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=Game Platform`select`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=Supercell`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=Bet`select`[]Proxy`[]CA`[]CA AUTO`[]DIRECT
+custom_proxy_group=Mainland`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=Final`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 
 enable_rule_generator=true
 overwrite_original_rules=true
