--- a/csh_clash.ini
+++ b/csh_clash.ini
@@ -11,7 +11,7 @@ ruleset=HBO,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/relea
 ruleset=Youtube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/YouTube/YouTube.list
 ruleset=Spotify,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Spotify/Spotify.list
 ruleset=TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/TikTok/TikTok.list
-ruleset=Bilibili,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/BiliBili/BiliBili.list
+ruleset=BiliBili,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/BiliBili/BiliBili.list
 ruleset=Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Telegram/Telegram.list
 ruleset=Twitter,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Twitter/Twitter.list
 ruleset=PayPal,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/PayPal/PayPal.list
