--- a/csh_clash.ini
+++ b/csh_clash.ini
@@ -11,7 +11,7 @@ ruleset=HBO,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/relea
 ruleset=Youtube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/YouTube/YouTube.list
 ruleset=Spotify,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Spotify/Spotify.list
 ruleset=TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/TikTok/TikTok.list
-ruleset=BiliBili,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/BiliBili/BiliBili.list
+ruleset=Bilibili,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/BiliBili/BiliBili.list
 ruleset=Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Telegram/Telegram.list
 ruleset=Twitter,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Twitter/Twitter.list
 ruleset=PayPal,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/PayPal/PayPal.list
@@ -47,10 +47,10 @@ custom_proxy_group=HBO`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AU
 custom_proxy_group=Youtube`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=Spotify`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=TikTok`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
-custom_proxy_group=BiliBili`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=Bilibili`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=Telegram`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=Twitter`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
-custom_proxy_group=Paypal`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=PayPal`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=Apple`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=Google`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=Microsoft`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
