--- a/csh_clash.ini
+++ b/csh_clash.ini
@@ -41,8 +41,8 @@ custom_proxy_group=SG AUTO`url-test`(新加坡|狮城|SG|Singapore)`http://www.g
 custom_proxy_group=CA`select`(加拿大|Canada|CA)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=CA AUTO`url-test`(加拿大|Canada|CA)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=Globle`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
-custom_proxy_group=Netflix`select`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
-custom_proxy_group=Disney+`select`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=Netflix`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=Disney+`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=HBO`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=Youtube`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=Spotify`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
