--- a/csh_clash.ini
+++ b/csh_clash.ini
@@ -5,6 +5,7 @@ ruleset=Game Platform,https://raw.githubusercontent.com/blackmatrix7/ios_rule_sc
 ruleset=Supercell,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Supercell/Supercell.list
 ruleset=Supercell,https://raw.githubusercontent.com/Olddriverrr/1/main/Supercell.list
 ruleset=Bet,https://raw.githubusercontent.com/Olddriverrr/1/main/bet.list
+ruleset=Blizzard,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Blizzard/Blizzard.list
 ruleset=Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Netflix/Netflix.list
 ruleset=Disney+,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Disney/Disney.list
 ruleset=HBO,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/HBO/HBO.list
@@ -57,6 +58,7 @@ custom_proxy_group=Microsoft`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[
 custom_proxy_group=Weibo`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=Amazon`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=Game Platform`select`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=Blizzard`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=Supercell`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=Bet`select`[]Proxy`[]CA`[]CA AUTO`[]DIRECT
 custom_proxy_group=Mainland`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
