--- a/csh_clash.ini
+++ b/csh_clash.ini
@@ -20,6 +20,7 @@ ruleset=Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/rel
 ruleset=Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Google/Google.list
 ruleset=Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Microsoft/Microsoft.list
 ruleset=Weibo,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Weibo/Weibo.list
+ruleset=Mainland,https://raw.githubusercontent.com/Olddriverrr/1/main/Mainland.list
 ruleset=Mainland,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/China/China.list
 ruleset=Mainland,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaIPs/ChinaIPs.list
 ruleset=Globle,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global.list
