--- a/csh_clash.ini
+++ b/csh_clash.ini
@@ -25,6 +25,7 @@ ruleset=PayPal,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/re
 ruleset=Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Apple/Apple.list
 ruleset=Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Google/Google.list
 ruleset=Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Microsoft/Microsoft.list
+ruleset=Globle,https://raw.githubusercontent.com/Olddriverrr/1/main/Globle.list
 ruleset=Globle,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global.list
 ;Final
 ruleset=Final,[]FINAL
