--- a/csh_clash.ini
+++ b/csh_clash.ini
@@ -25,8 +25,8 @@ ruleset=PayPal,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/re
 ruleset=Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Apple/Apple.list
 ruleset=Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Google/Google.list
 ruleset=Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Microsoft/Microsoft.list
-ruleset=Globle,https://raw.githubusercontent.com/Olddriverrr/1/main/Globle.list
-ruleset=Globle,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global.list
+ruleset=Global,https://raw.githubusercontent.com/Olddriverrr/1/main/Global.list
+ruleset=Global,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global.list
 ;Final
 ruleset=Final,[]FINAL
 
@@ -68,7 +68,7 @@ custom_proxy_group=Game Platform`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]
 custom_proxy_group=Blizzard`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=Supercell`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 ;未归类分流
-custom_proxy_group=Globle`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=Global`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=Mainland`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=Final`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 
