--- a/csh_clash.ini
+++ b/csh_clash.ini
@@ -57,7 +57,7 @@ custom_proxy_group=Blizzard`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]
 custom_proxy_group=Supercell`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 ;未归类分流
 custom_proxy_group=Global`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
-custom_proxy_group=Mainland`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=Mainland`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT`https://github.com/Orz-3/mini/blob/master/Color/CN.png
 custom_proxy_group=Final`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 ;节点
 custom_proxy_group=US`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`1200,,50
