--- a/csh_clash.ini
+++ b/csh_clash.ini
@@ -51,7 +51,7 @@ custom_proxy_group=Twitter`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]J
 custom_proxy_group=Reddit`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=PayPal`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=Amazon`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
-custom_proxy_group=Bet`select`[]Proxy`[]CA`[]CA AUTO`[]DIRECT
+custom_proxy_group=Bet`select`[]Proxy`[]HK`[]HK AUTO`[]CA`[]CA AUTO`[]DIRECT
 ;游戏
 custom_proxy_group=Game Platform`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=Blizzard`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
