--- a/csh_clash.ini
+++ b/csh_clash.ini
@@ -14,12 +14,7 @@ ruleset=Supercell,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script
 ruleset=Supercell,https://raw.githubusercontent.com/Olddriverrr/1/main/Supercell.list
 ruleset=Bet,https://raw.githubusercontent.com/Olddriverrr/1/main/Bet.list
 ruleset=Blizzard,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Blizzard/Blizzard.list
-ruleset=Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Netflix/Netflix.list
-ruleset=Disney+,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Disney/Disney.list
-ruleset=HBO,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/HBO/HBO.list
-ruleset=Youtube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/YouTube/YouTube.list
-ruleset=Spotify,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Spotify/Spotify.list
-ruleset=TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/TikTok/TikTok.list
+ruleset=GlobalMedia,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
 ruleset=Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Telegram/Telegram.list
 ruleset=Twitter,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Twitter/Twitter.list
 ruleset=PayPal,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/PayPal/PayPal.list
@@ -35,23 +30,17 @@ ruleset=Final,[]FINAL
 custom_proxy_group=All Proxies`select`.*
 custom_proxy_group=Proxy`select`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]All Proxies
 ;流媒体
-custom_proxy_group=Netflix`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
-custom_proxy_group=Disney+`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
-custom_proxy_group=HBO`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
-custom_proxy_group=Youtube`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
-custom_proxy_group=Spotify`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
-custom_proxy_group=TikTok`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=GlobalMedia`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=BiliBili`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 ;网页平台
 custom_proxy_group=Apple`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=Google`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=Microsoft`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=Telegram`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
-custom_proxy_group=Twitter`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=Reddit`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
-custom_proxy_group=PayPal`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
+custom_proxy_group=Twitter`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=Amazon`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
-custom_proxy_group=Bet`select`[]Proxy`[]HK`[]HK AUTO`[]CA`[]CA AUTO`[]DIRECT
+custom_proxy_group=Bet`select`[]Proxy`[]HK`[]HK AUTO`[]UK`[]UK AUTO`[]GER`[]GER AUTO`[]CA`[]CA AUTO`[]DIRECT
 ;游戏
 custom_proxy_group=Game Platform`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
 custom_proxy_group=Blizzard`select`[]Proxy`[]US`[]US AUTO`[]HK`[]HK AUTO`[]JP`[]JP AUTO`[]TW`[]TW AUTO`[]SG`[]SG AUTO`[]DIRECT
@@ -71,6 +60,10 @@ custom_proxy_group=TW`select`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.co
 custom_proxy_group=TW AUTO`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`1200,,20
 custom_proxy_group=SG`select`(新加坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`1200,,20
 custom_proxy_group=SG AUTO`url-test`(新加坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`1200,,20
+custom_proxy_group=UK`select`(UK|Kindom|英国|英)`http://www.gstatic.com/generate_204`1200,,20
+custom_proxy_group=UK AUTO`url-test`(UK|Kindom|英国|英)`http://www.gstatic.com/generate_204`1200,,20
+custom_proxy_group=GER`select`(German|德国|德)`http://www.gstatic.com/generate_204`1200,,20
+custom_proxy_group=GER AUTO`url-test`(German|德国|德)`http://www.gstatic.com/generate_204`1200,,20
 custom_proxy_group=CA`select`(加拿大|Canada|CA)`http://www.gstatic.com/generate_204`1200,,20
 custom_proxy_group=CA AUTO`url-test`(加拿大|Canada|CA)`http://www.gstatic.com/generate_204`1200,,20
 
